<resources>
    <string name="app_name">SafeHouse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_myproperties">My Properties</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_help">Help</string>
    <string name="welcome">Welcome to SafeHouse</string>
    <string name="manage">Use My Properties to manage your Home view:</string>
    <string name="instruction1">Press once to select a sensor.</string>
    <string name="instruction2">Hold to set a sensor as default.</string>
    <string name="menu_disconnect">Disconnect</string>
</resources>
